# bbreplace

./: README.md  pubspec.yaml
.github/workflows/: android-release.yml
android/: gradle.properties
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native_vad_jni.cpp
android/app/src/main/cpp/rnnoise/src/: os_support.h
android/app/src/main/cpp/rtc_base/: checks.h  compile_assert_c.h  sanitizer.h
android/app/src/main/cpp/rtc_base/system/: arch.h
android/app/src/main/kotlin/com/example/bbreplace/: AudioRouteController.kt  AutoRestartReceiver.kt  MainActivity.kt  RnNoiseNative.kt  RootTinycapCapture.kt  RunStateStore.kt  SpeechRepeaterEngine.kt  SpeechRepeaterService.kt  StatusReporter.kt  WebRtcVadNative.kt
android/app/src/main/res/values/: strings.xml
lib/: main.dart
test/: widget_test.dart
